--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,12 @@ jobs:
 
       - name: Processing dep
         run: wget -O- https://github.com/processing/processing/releases/download/processing-0270-3.5.4/processing-3.5.4-linux64.tgz |tar xzgv -
+        
+      - name: Processing Sound lib
+        run: |
+          wget -O- https://github.com/processing/processing-sound/releases/download/v2.3.1/sound.zip |unzip
+          ls -la
+    
 
       - name: build
         run:  ./processing-3.5.4/processing-java --sketch=`pwd` --output="CombatShooter-release" --platform=${{matrix.release-os}} --export
