--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,10 @@ jobs:
         
       - name: Processing Sound lib
         run: |
-          wget -O- https://github.com/processing/processing-sound/releases/download/v2.3.1/sound.zip |unzip
+          mkdir libraries
+          cd libraries
+          wget -O- https://github.com/processing/processing-sound/releases/download/v2.3.1/sound.zip
+          unzip sound.zip
           ls -la
     
 
