--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           mkdir libraries
           cd libraries
           wget -O- https://github.com/processing/processing-sound/releases/download/v2.3.1/sound.zip
-          unzip sound.zip
+          unzip sound.zip -d sound
           ls -la
     
 
