--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,16 +24,14 @@ jobs:
       - name: Processing Sound lib
         run: |
           mkdir libraries
-          cd libraries
           wget https://github.com/processing/processing-sound/releases/download/v2.3.1/sound.zip
-          unzip sound.zip -d sound
+          unzip sound.zip -d libraries
     
 
       - name: build
         run:  |
           ls -la
           pwd
-          ls libraries
           ls libraries/sound
           ./processing-3.5.4/processing-java --sketch=`pwd` --output="CombatShooter-release" --platform=${{matrix.release-os}} --export
 
