--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,6 @@ jobs:
         
       - name: Processing Sound lib
         run: |
-          cd ../..
           mkdir libraries
           wget https://github.com/processing/processing-sound/releases/download/v2.3.1/sound.zip
           unzip sound.zip -d libraries
@@ -36,7 +35,7 @@ jobs:
         run:  |
           ls -la
           pwd
-          ./processing-3.5.4/processing-java --sketch=`pwd` --output="CombatShooter-release" --platform=${{matrix.release-os}} --export
+          ./processing-3.5.4/processing-java --sketch=`pwd` --output="CombatShooter-release" --platform=${{matrix.release-os}} --export --sketch-folder=`pwd`
 
       - name: Save results
         uses: actions/upload-artifact@v2
